--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Tahoma, Geneva, sans-serif;
 }
 
 .App-intro {
@@ -10,3 +11,48 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+a {
+  color: orangered;
+  background-color: white;
+}
+
+button {
+
+  background-color: white;
+
+}
+ul.header {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  
+}
+
+.header a {
+  text-decoration: none;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  border: 2px solid rgb(255, 208, 0);
+  padding: 16px 32px;
+  text-align: center;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex: 1;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  width: 10rem;
+}
+
+a:hover {
+  background-color: rgb(255, 208, 0);
+}
+
+
+
+
+
