--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,6 @@
   to { transform: rotate(360deg); }
 }
 
-a {
-  color: orangered;
-  background-color: white;
-}
-
-button {
-
-  background-color: white;
-
-}
 ul.header {
   display: flex;
   justify-content: center;
@@ -50,6 +40,10 @@ ul.header {
 
 a:hover {
   background-color: rgb(255, 208, 0);
+}
+
+.App-content {
+  min-height: 100vh;
 }
 
 
