--- a/src/component/Location/Location.css
+++ b/src/component/Location/Location.css
@@ -1,9 +1,29 @@
 
-#weather-day {
+#weather--week {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin: auto;
+    
+}
+
+#weather--day {
+    display: flex;
+    flex-direction: column;
+
     margin-top: 2rem;
-    background-color: whitesmoke;
+    /* -webkit-box-shadow: 3px 3px 6px 0px rgba(199,199,199,1);
+    -moz-box-shadow: 3px 3px 6px 0px rgba(199,199,199,1);
+    box-shadow: 3px 3px 6px 0px rgba(199,199,199,1); */
+}
+
+#weather--time {
+    display: flex;
+    flex-direction: column; 
+    margin-bottom: 2rem;
 }
 
 ul li {
     list-style: none;
+    display: flex;
 }
