--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,4 +1,4 @@
-.App-logo {
+/* .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
   }
@@ -20,4 +20,5 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  }
+  } */
+  
